Refactoring per terza release, risoluzione tutti gli issue